# mystical-runic

./: .gitignore  .rustdoc.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  README.md  generate_docs.sh  generate_website.sh  run_benchmarks.sh  rustdoc-custom.css  validate_docs.sh
benchmarks/: README.md  ecosystem_benchmark.rs  performance_demo.rs  simple_benchmark.rs  v0_5_2_performance_benchmark.rs
cli-rendering/: Cargo.toml  README.md  output.html
cli-rendering/data/: main.json
cli-rendering/src/: cli.rs  data_loader.rs  file_reader.rs  main.rs
cli-rendering/templates/: main.rune
cli-rendering/templates/scrolls/: wisdom.rune
cli-rendering/tests/: integration_test.rs
doc/: README.md  README_DOCS.md  examples.html  index.html  installation.html  whats_new.html
doc/api/: overview.html
doc/api/functions/: filter_function.html  helper_function.html  template_context.html  template_engine.html  template_error.html  template_value.html
doc/concepts/: data_structures.html  filters_helpers.html  overview.html  security_performance.html  templating_syntax.html
examples/: ide_integration_showcase.rs  spell_casting.rs
examples/real_world_demo/: Cargo.toml  QUICKSTART.md  README.md  output_demo.html  run_demo.sh
examples/real_world_demo/src/: main.rs
examples/real_world_demo/templates/: base.html  shop.html
examples/real_world_demo/templates/components/: blog_section.html  gaming_stats.html  recent_comments.html  user_preferences.html  user_profile.html
src/: async_engine.rs  bytecode.rs  cli.rs  context.rs  debug.rs  ecosystem.rs  engine.rs  error.rs  layouts.rs  lib.rs  lsp.rs  suggestions.rs  utils.rs  value.rs  wasm_support.rs  web_frameworks.rs
tests/: integration_tests.rs  naming_styles_tests.rs  performance_tests.rs  rust_2024_compat_tests.rs  security_tests.rs  unit_tests.rs  v0_2_0_features_tests.rs  v0_3_0_features_tests.rs  v0_4_0_basic_tests.rs  v0_4_1_ide_integration_tests.rs  v0_5_0_ecosystem_integration_tests.rs  warning_cleanup_tests.rs
tests/data/: cli_data.json
tests/fixtures/: user_profile.html
tests/templates/: cli_test.html  simple.html
