[package]
name = "mystical-runic"
version = "0.4.1"
edition = "2021"
rust-version = "1.74.0"
authors = ["yrbane <yrbane@nethttp.net>"]
description = "🔮 Ancient symbols for modern web magic - A mystical templating engine with full IDE integration: LSP, auto-completion, syntax highlighting, real-time diagnostics"
license = "MIT"
repository = "https://github.com/yrbane/mystical-runic.git"
keywords = ["template", "html", "web", "runic", "magic"]
categories = ["template-engine", "web-programming"]

[dependencies]

[[bin]]
name = "performance_demo"
path = "benchmarks/performance_demo.rs"

[dev-dependencies]