[package]
name = "mystical-runic"
version = "0.5.0"
edition = "2021"
rust-version = "1.74.0"
authors = ["yrbane <yrbane@nethttp.net>"]
description = "🔮 Ancient symbols for modern web magic - A mystical templating engine with full IDE integration: LSP, auto-completion, syntax highlighting, real-time diagnostics"
license = "MIT"
repository = "https://github.com/yrbane/mystical-runic.git"
keywords = ["template", "html", "web", "runic", "magic"]
categories = ["template-engine", "web-programming"]

[dependencies]
# Async runtime support
tokio = { version = "1.35", features = ["rt", "fs", "io-util"], optional = true }
futures = { version = "0.3", optional = true }

# Web framework integrations (all optional)
axum = { version = "0.7", features = ["macros"], optional = true }
warp = { version = "0.3", optional = true }
actix-web = { version = "4.0", optional = true }

# WASM support
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }

# CLI tools dependencies
clap = { version = "4.4", features = ["derive"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
toml = { version = "0.8", optional = true }

[features]
default = []
async = ["tokio", "futures"]
axum-integration = ["async", "axum"]
warp-integration = ["async", "warp"]
actix-integration = ["async", "actix-web"]
web-frameworks = ["axum-integration", "warp-integration", "actix-integration"]
wasm = ["wasm-bindgen", "js-sys", "web-sys"]
cli = ["clap", "serde", "serde_json", "toml"]
full = ["async", "web-frameworks", "wasm", "cli"]

[[bin]]
name = "performance_demo"
path = "benchmarks/performance_demo.rs"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
futures = "0.3"