[package]
name = "mystical-runic"
version = "0.5.3"
edition = "2021"
rust-version = "1.74.0"
authors = ["yrbane <yrbane@nethttp.net>"]
description = "High-performance templating engine for Rust with enterprise security, advanced monitoring, comprehensive developer tools, and ecosystem integration. Zero-dependency core with optional async, web framework, WASM, and CLI features."
license = "MIT"
repository = "https://github.com/yrbane/mystical-runic.git"
keywords = ["template", "templating", "html", "web", "mustache"]
categories = ["template-engine", "web-programming", "development-tools"]
exclude = ["examples/", "benchmarks/", "target/", "doc/"]
readme = "README.md"
documentation = "https://docs.rs/mystical-runic"
homepage = "https://github.com/yrbane/mystical-runic"

[package.metadata.docs.rs]
# Enable all features when building docs on docs.rs
all-features = true
# Set the default target to show the crate documentation
default-target = "x86_64-unknown-linux-gnu"
# Use rustdoc args to improve documentation generation
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Async runtime support
tokio = { version = "1.35", features = ["rt", "fs", "io-util"], optional = true }
futures = { version = "0.3", optional = true }

# Web framework integrations (all optional)
axum = { version = "0.7", features = ["macros"], optional = true }
warp = { version = "0.3", optional = true }
actix-web = { version = "4.0", optional = true }

# WASM support
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }

# CLI tools dependencies
clap = { version = "4.4", features = ["derive"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
toml = { version = "0.8", optional = true }

[features]
default = []
async = ["tokio", "futures"]
axum-integration = ["async", "axum"]
warp-integration = ["async", "warp"]
actix-integration = ["async", "actix-web"]
web-frameworks = ["axum-integration", "warp-integration", "actix-integration"]
wasm = ["wasm-bindgen", "js-sys", "web-sys"]
cli = ["clap", "serde", "serde_json", "toml"]
full = ["async", "web-frameworks", "wasm", "cli"]

# Performance demo excluded from publish
# [[bin]]
# name = "performance_demo"
# path = "benchmarks/performance_demo.rs"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
futures = "0.3"