[package]
name = "runic_templater"
version = "0.1.0"
edition = "2021"

[dependencies]
mystical-runic = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
webbrowser = "0.8"
tempfile = "3.20.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "1.0.8"
